style: Hide text on buttons on mobile view. Show only icons with tooltips to clarify functionality. This creates a cleaner look for the mobile user and deals with the issue of buttons and/or text extending outside of the card elements on smaller screens.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -315,14 +315,20 @@ footer a:hover{
     overflow: hidden;
 }
 
-.card .card-action.wishlist a {
-    color: #F69222 !important;
-}
-
 .card .card-action.wishlist a:hover {
     color: #BF7218 !important;
 }
 
+.card .card-action.wishlist a.btn {
+    color: #F69222 !important;
+    font-weight: 500;
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
+    margin-right: 0px;
+}
 /* Modals -------------------------------------------*/
 .modal-content {
     margin-top: 2rem;
